--- a/.github/ISSUE_TEMPLATE/project_addition.yaml
+++ b/.github/ISSUE_TEMPLATE/project_addition.yaml
@@ -1,43 +1,43 @@
-name: Project Addition
-description: Add a new project to the list.
-title: "[Project] "
-labels: ["project-addition"]
+name: ➕ Ajout de projet
+description: Ajouter un nouveau projet à la liste.
+title: "[Projet] "
+labels: ["ajout-projet"]
 body:
   - type: markdown
     attributes:
       value: |
-        ## Project Addition
-        Suggest adding a new project or item.
+        ## Ajout de projet
+        Suggérer d'ajouter un nouveau projet ou élément.
   - type: input
     id: project-name
     attributes:
-      label: Project Name
-      description: Name of the project to add.
-      placeholder: "e.g., My New App"
+      label: Nom du projet
+      description: Nom du projet à ajouter.
+      placeholder: "ex. : Mon Application"
     validations:
       required: true
   - type: textarea
     id: description
     attributes:
       label: Description
-      description: Detailed description of the project.
-      placeholder: "What does it do? Why add it?"
+      description: Description détaillée du projet.
+      placeholder: "Que fait-il ? Pourquoi l'ajouter ?"
     validations:
       required: true
   - type: input
     id: url
     attributes:
-      label: Project URL
-      description: Link to the project (if applicable).
-      placeholder: "https://example.com"
+      label: URL du projet
+      description: Lien vers le projet (si applicable).
+      placeholder: "https://exemple.com"
   - type: checkboxes
     id: terms
     attributes:
-      label: Checklist
+      label: Liste de contrôle
       options:
-        - label: I have checked if this project already exists
+        - label: J'ai vérifié si ce projet existe déjà
           required: true
-        - label: I have read the Contributing Guidelines
+        - label: J'ai lu les directives de contribution
           required: true
-        - label: I agree to follow this project's Code of Conduct
+        - label: J'accepte de suivre le code de conduite du projet
           required: true
