--- a/.github/ISSUE_TEMPLATE/style_changing_request.yaml
+++ b/.github/ISSUE_TEMPLATE/style_changing_request.yaml
@@ -1,43 +1,43 @@
-name: Style Changing Request
-description: Suggest a style design.
+name: 🎨 Demande de changement de style
+description: Suggérer un design de style.
 title: "[Style] "
 labels: ["design", "ui/ux"]
 body:
   - type: markdown
     attributes:
       value: |
-        ## Style Change Request
-        Propose changes to the visual style or design.
+        ## Demande de changement de style
+        Proposer des changements au style visuel ou au design.
   - type: textarea
     id: current-style
     attributes:
-      label: Current Style
-      description: Describe the existing style that needs changing.
-      placeholder: "Screenshots or descriptions..."
+      label: Style actuel
+      description: Décrivez le style existant qui nécessite un changement.
+      placeholder: "Captures d'écran ou descriptions..."
     validations:
       required: true
   - type: textarea
     id: proposed-style
     attributes:
-      label: Proposed Style
-      description: What changes do you suggest?
-      placeholder: "Colors, layouts, mocks..."
+      label: Style proposé
+      description: Quels changements suggérez-vous ?
+      placeholder: "Couleurs, mises en page, maquettes..."
     validations:
       required: true
   - type: textarea
     id: rationale
     attributes:
-      label: Rationale
-      description: Why this change? Benefits?
-      placeholder: "Accessibility, consistency..."
+      label: Justification
+      description: Pourquoi ce changement ? Avantages ?
+      placeholder: "Accessibilité, cohérence..."
   - type: checkboxes
     id: terms
     attributes:
-      label: Checklist
+      label: Liste de contrôle
       options:
-        - label: I have checked the existing issues
+        - label: J'ai vérifié les issues existantes
           required: true
-        - label: I have read the Contributing Guidelines
+        - label: J'ai lu les directives de contribution
           required: true
-        - label: I agree to follow this project's Code of Conduct
+        - label: J'accepte de suivre le code de conduite du projet
           required: true
