feat: ajouter un modèle de question pour faciliter les demandes d'information sur le projet refactor: mettre à jour les étiquettes des modèles de demande de fonctionnalité et de refactorisation refactor: simplifier les étiquettes du modèle de demande de changement de style delete: supprimer le modèle d'ajout de projet obsolète

--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -1,7 +1,7 @@
 name: ✨ Demande de fonctionnalité
 description: Suggérer une nouvelle fonctionnalité.
 title: "[Fonctionnalité] "
-labels: ["amélioration"]
+labels: ["fonctionnalité"]
 body:
   - type: markdown
     attributes:
