--- a/.github/ISSUE_TEMPLATE/style_changing_request.yaml
+++ b/.github/ISSUE_TEMPLATE/style_changing_request.yaml
@@ -1,7 +1,7 @@
 name: 🎨 Demande de changement de style
 description: Suggérer un design de style.
 title: "[Style] "
-labels: ["design", "ui/ux"]
+labels: ["design"]
 body:
   - type: markdown
     attributes:
